cmake_minimum_required(VERSION 3.22)
project(ee205_animal_farm_3)
set(CMAKE_CXX_STANDARD 14)
add_executable(ee205_animal_farm_3 config.h main.cpp SinglyLinkedList.cpp SinglyLinkedList.h Animal.cpp Animal.h Mammal.cpp Mammal.h Node.h Weight.cpp Weight.h List.cpp List.h Color.h Cat.h Cat.cpp Gender.h Node.cpp)